--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,9 +8,15 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			/WEB-INF/spring/root-context.xml
-			/WEB-INF/spring/context-security.xml
 		</param-value>
 	</context-param>
+	
+	    <context-param>
+    <param-name>contextClass</param-name>
+    <param-value>
+    org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+    </param-value>
+</context-param>
 	
 	  <!-- 문자 인코딩 처리 필터 설정 -->
   <filter>
@@ -30,25 +36,6 @@
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-	
-	<!-- Spring Security -->
-	<listener>
-		<!-- 한 유저가 다른 브라우저로 동시 로그인하는 것을 막음 -->
-		<listener-class>
-			org.springframework.security.web.session.HttpSessionEventPublisher
-		</listener-class>
-	</listener>
-	<filter>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<!-- 모든 요청은 이 프록시필터를 거치고 이를 통해 인증, 인가를 수행 -->
-		<filter-class>
-			org.springframework.web.filter.DelegatingFilterProxy
-		</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
 
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
@@ -58,11 +45,13 @@
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet
+		</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
 				/WEB-INF/spring/appServlet/servlet-context.xml
+				/WEB-INF/spring/root-context.xml
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
@@ -73,18 +62,27 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
   
+  	<welcome-file-list>
+		<welcome-file>/WEB-INF/views/home.jsp</welcome-file>
+	</welcome-file-list>
+	<jsp-config>
+		<jsp-property-group>
+			<url-pattern>*.jsp</url-pattern>
+			<page-encoding>UTF-8</page-encoding>
+		</jsp-property-group>
+	</jsp-config>
 
   <!-- 더블/로 스프링 시큐리티와 충돌 -->
 <!--   <welcome-file-list>
   	<welcome-file>/WEB-INF/views/home.jsp</welcome-file>
   </welcome-file-list> -->
   <!-- jsp 파일 utf-8 페이지 인코딩 설정 <%@page pageEncoding="UTF-8"%> -->
-  <jsp-config>
+  <!-- <jsp-config>
     <jsp-property-group>
       <url-pattern>*.jsp</url-pattern>
       <page-encoding>UTF-8</page-encoding>
     </jsp-property-group>
-  </jsp-config>
+  </jsp-config> -->
 
   <!-- 에러 페이지 설정 -->
   <error-page>
